# chronos

./: .gitignore  CHANGELOG.md  LICENSE  README.markdown  README.md  appveyor.yml  cabal.project  chronos.cabal  default.nix  fourmolu.yaml  release.nix  repl.sh  shell.nix  stack.ghcjs.yaml  stack.yaml
.github/: CODEOWNERS
.github/workflows/: build.yaml  ci.yml  other-os.yaml  release.yaml
bench/: Bench.hs
nix/: savage.nix
nix/haskell/: chronos.nix  star.nix
scripts/: hackage-docs.sh
src/: Chronos.hs  Torsor.hs
src/Chronos/: Calendar.hs  Date.hs  Datetime.hs  Day.hs  Internal.hs  Match.hs  Month.hs  Nanoseconds.hs  Posix.hs  Tai.hs  TimeOfDay.hs  Types.hs  Utc.hs
src/Chronos/Date/: Text.hs
src/Chronos/Date/ByteString/: Char7.hs
src/Chronos/Datetime/: Text.hs
src/Chronos/Datetime/ByteString/: Char7.hs
src/Chronos/Internal/: CTimespec.hs  Conversion.hs  FastText.hs  Format.hs
src/Chronos/Locale/: English.hs
src/Chronos/Locale/English/: Text.hs
src/Chronos/OffsetDatetime/: Text.hs
src/Chronos/OffsetDatetime/ByteString/: Char7.hs
src/Chronos/TimeOfDay/: Text.hs
src/Chronos/TimeOfDay/ByteString/: Char7.hs
src/cbits/: hs-time.c
test/: Doctests.hs  Spec.hs
